[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Objects/clock.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Objects/Clock.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 26.3549

[sub_resource type="CircleShape2D" id=4]
radius = 24.4991

[node name="Clock" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 3 )

[node name="ChangeDirectionTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="PaintTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_ChangeDirectionTimer_timeout"]
[connection signal="timeout" from="PaintTimer" to="." method="_on_PaintTimer_timeout"]
